--- a/config/boards/shields/fine40/fine40.zmk.yml
+++ b/config/boards/shields/fine40/fine40.zmk.yml
@@ -2,7 +2,7 @@ file_format: "1"
 id: fine40rev1
 name: fine!40
 type: shield
-url: https://github.com/Aidan-OS/Mochi40
+url: https://github.com/weasnerb/fine-40-Zmk-Config
 requires: [pro_micro]
 exposes: [i2c_oled]
 features:
